grammar.txt

program: category* END_OF_FILE

category: <IDENTIFIER> ':' expr

expr: <PERCENT> | <UDOUBLE> | <INTEGER> | operation | <IDENTIFIER> | list

operation: <IDENTIFIER> '(' expr* ')'

list: '{' list_item* '}'

list_item: expr ( ':' expr )?
